# CPPTemplate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
helper_scripts/: run_internal.py
scripts/: bootstrap_vcpkg.py  build.py  vcpkg_install.py
scripts/helpers/: build_internal.py
src/: CMakeLists.txt
template_project/: CMakeLists.txt
template_project/src/: Main.cpp
